fixed color of labels on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -1228,6 +1228,9 @@ _:-ms-fullscreen, :root body {
     font-size: 18px;
     pointer-events: none;
     transition: 0.5s ease-in;
+    @media (max-width:768px) {
+        color: #000;
+    }
 }
 
 .name-label {
